<?xml version="1.0"?>
<package format="2">
  <name>lego_loam</name>
  <version>1.0.0</version>
  <description>LeGO-LOAM from IROS 2018</description>

  <maintainer email="xxx@xxx.xxx">Tixiao Shan</maintainer>

  <license>BSD</license>

  <author>Tixiao Shan</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>libopencv-dev</depend>
  <depend>libpcl-all-dev</depend>

  <build_depend>message_generation</build_depend>
  <build_depend>pcl_conversions</build_depend>

  <exec_depend>message_runtime</exec_depend>
</package>
